--- a/src/shua_blog/部署个人博客.md
+++ b/src/shua_blog/部署个人博客.md
@@ -194,11 +194,11 @@ git push -u origin main
 
 工作流完成后，会自动创建一个名为 gh-pages 的分支（这个分支里存的是构建后的静态文件）。
 
-1. **设置 GitHub Pages 源**
+3. **设置 GitHub Pages 源**
 
 进入仓库的「Settings」（设置）→ 往下滑找到「Pages」选项 → 在「Source」（源）下拉框中，选择「Deploy from a branch」→ 「Branch」（分支）选择 gh-pages，「Folder」（文件夹）保持 /(root) → 点击「Save」保存。
 
-#### 方式 2：手动部署（没选自动工作流时用）
+**方式 2：手动部署（没选自动工作流时用）**
 
 如果创建项目时没选自动工作流，需要手动把构建后的 dist 文件夹推到 gh-pages 分支。
 
@@ -212,13 +212,13 @@ git push -u origin main
 npm run docs:build
 ```
 
-1. **安装** **gh-pages** **工具（用于推送** **dist** **到** **gh-pages** **分支）**
+2. **安装** **gh-pages** **工具（用于推送** **dist** **到** **gh-pages** **分支）**
 
 ```
 npm install -D gh-pages
 ```
 
-1. **配置** **package.json** **脚本**
+3. **配置** **package.json** **脚本**
 
 打开 package.json，在 scripts 里加一个部署脚本：
 
@@ -232,13 +232,13 @@ npm install -D gh-pages
 }
 ```
 
-1. **执行部署命令**
+4. **执行部署命令**
 
 ```
 npm run deploy
 ```
 
-1. **设置 GitHub Pages 源**
+5. **设置 GitHub Pages 源**
 
 和自动部署的步骤 3 一样：仓库「Settings」→「Pages」→ 选择 gh-pages 分支 → 保存。
 
@@ -259,3 +259,20 @@ npm run deploy
 1. **工作流运行失败**：打开「Actions」查看错误日志，常见原因是 base 配置错误、依赖安装失败（可重新推一次代码触发工作流）。
 
 1. **404 页面**：确认 gh-pages 分支是否存在，以及「Pages」设置的分支是否正确。
+
+
+
+## 域名映射
+
+#### 配置 DNS 解析
+
+1. 注册域名
+2. 添加 CNAME 记录
+
+#### GitHub 仓库设置
+
+1. **添加自定义域名**
+   - 进入仓库 **Settings > Pages**，在 **Custom domain** 中输入你的域名（如 `shuashua.site`），点击 **Save**。
+   - GitHub 会自动在仓库根目录创建或更新 `CNAME` 文件，内容为你的域名。
+2. **验证域名所有权**
+   - 若提示域名已被占用，需在 **Settings > Pages** 中点击 **Verify ownership**，按提示在 DNS 中添加 TXT 记录（如 `_github-pages-verification-code.shuashua.site`），验证通过后即可绑定。
