--- a/src/shua_blog/部署个人博客.md
+++ b/src/shua_blog/部署个人博客.md
@@ -169,7 +169,7 @@ export default defineUserConfig({
 
 模板会自动生成「GitHub Actions 工作流文件」（路径：项目根目录/.github/workflows/deploy.yml），只要把代码推到 GitHub，工作流会自动帮你构建项目、生成 gh-pages 分支（部署用的分支）。
 
-##### 步骤：
+**步骤：**
 
 1. **提交本地代码到 GitHub**
 
@@ -202,7 +202,7 @@ git push -u origin main
 
 如果创建项目时没选自动工作流，需要手动把构建后的 dist 文件夹推到 gh-pages 分支。
 
-##### 步骤：
+**步骤：**
 
 1. **构建项目**
 
@@ -242,7 +242,7 @@ npm run deploy
 
 和自动部署的步骤 3 一样：仓库「Settings」→「Pages」→ 选择 gh-pages 分支 → 保存。
 
-### 四、验证部署结果
+#### 四、验证部署结果
 
 设置完成后，GitHub 会显示「Your site is live at https://xxx.github.io/xxx/」，点击这个链接就能访问你的博客了。
 
@@ -251,14 +251,6 @@ npm run deploy
 - 情况 2（普通仓库）：链接是 https://你的用户名.[github.io/](http://github.io/)你的仓库名/
 
 **注意**：GitHub Pages 生效可能需要 1-5 分钟，若刚开始访问是 404，稍等几分钟再刷新。
-
-### 常见问题解决
-
-1. **样式错乱 / 图片加载失败**：检查 config.ts 里的 base 是否配置正确（必须和仓库路径一致，结尾带 /）。
-
-1. **工作流运行失败**：打开「Actions」查看错误日志，常见原因是 base 配置错误、依赖安装失败（可重新推一次代码触发工作流）。
-
-1. **404 页面**：确认 gh-pages 分支是否存在，以及「Pages」设置的分支是否正确。
 
 
 
